# Join-Sampling

./: CMakeLists.txt  README.md  Temp.md  main.cpp  plot.ipynb
algorithms/: baseline1.hpp  baseline2.hpp  ours.hpp  ours_adaptive.hpp
build_tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  rect_sampler_experiments
data/: Rectangle-Generation.ipynb  rectangles2.csv
include/: geometry.hpp  structures.hpp  utils.hpp
results/: experiment_log.txt
